add_and_activate_connection_async drops from connection's profile key_mgmt `sae` to `wpa-psk`
Whenever in connection's profile key_mgmt property is set to sae
the add_and_activate_connection_async
call drops it to wpa-psk
. It should keep sae
even if the AP supports WPA-PSK, because that's a downgrade in security.
The patch that has changed that is in here 0e30a525 and has been applied by @verdre